<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cadviewlista"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="10dp"
    card_view:cardUseCompatPadding="true"
    >


    <!-- Titulo -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_margin">

        <ImageView
            android:id="@+id/imageEvent"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:background="@drawable/wonderful_event"
            android:layout_marginBottom="@dimen/activity_margin"/>
        <TextView
            android:id="@+id/id_CV_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CVnombre"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_fechainicio_lbl_dt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/CVfechai"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/id_CV_fecha_inicio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/CVfechai"
                            android:textAppearance="?android:attr/textAppearanceSmall" />


                    </LinearLayout>

                    <TextView
                        android:id="@+id/txt_espacio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="       "
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/black" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/txt_fechafin_lbl_dt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/CVfechaf"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@android:color/black"
                            />

                        <TextView
                            android:id="@+id/id_Cv_fecha_final"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/CVfechaf"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">



                    <TextView
                        android:id="@+id/id_Cv_precio_lbl"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/precio"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_espacio1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="    "
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/id_Cv_precio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/CVprecio"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
            <android.support.design.widget.FloatingActionButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:tint="@android:color/background_dark"
                card_view:backgroundTint="@color/cardview_light_background"
                card_view:srcCompat="@drawable/ic_check_black_24dp" />
        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>